# mcstatus

./: .gitignore  Cargo.toml
src/: auth.rs  connection.rs  main.rs  token_store.rs  utils.rs
src/packet/: encryption_request.rs  encryption_response.rs  handshake.rs  login_acknowledged.rs  login_start.rs  login_success.rs  mod.rs  set_compression.rs  status_request.rs  status_response.rs
src/packet/configure/: mod.rs
