[package]
name = "mcstatus"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
lto = true

[dependencies]
aes = "0.8.4"
anyhow = "1.0.89"
cfb8 = { version = "0.8.1", features = ["std"] }
clap = { version = "4.5.18", features = ["derive"] }
der = "0.7.9"
mc-varint = "0.1.1"
num-bigint = "0.4.6"
oauth2 = "4.4.2"
quartz_nbt = "0.2.9"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["blocking"] }
rsa = "0.9.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha1_smol = { version = "1.0.1", features = ["std"] }
shadowsocks-crypto = { version = "0.5.5", features = ["v1-stream"] }
zune-inflate = { version = "0.2.54", features = ["zlib"] }
